# nor-reward-distribution-bot

./: .env.example  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-dev-holesky.yml  ci-dev.yml  ci-prod.yml  ci-staging.yml  integration-tests.yml  tests-and-checks.yml
alerts/: alerts.tests.yml  alerts.yml
interfaces/: NodeOperatorRegistry.json  StETH.json
src/: main.py  variables.py  web3_types.py
src/bots/: distributor.py
src/contracts/: extention.py  interface.py  node_operator_registry.py  steth.py
src/metrics/: healthcheck.py  metrics.py
src/services/: block_iterator.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/contracts/: contract.py  test_node_operator_registry.py
tests/integration/e2e/: test_distribution.py
tests/unit/: conftest.py  test_block_iterator.py  test_distributor.py
