[tool.poetry]
name = "nor-reward-distribution-bot"
version = "1.0.0"
description = "Permissionless reward distribution bot for Lido Node Operator Registry staking module."
authors = ["F4ever <raman.s@lido.fi>"]
license = "GPL 3.0"
readme = "README.md"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^6.19.0"
prometheus-client = "^0.20.0"
requests = "^2.32.3"
web3-multi-provider = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pyright = "^1.1.366"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src",
  "tests",
]
markers = [
    "unit",  # offline
    "integration",  # anvil fork
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "tests", extraPaths=["src", "tests"] }
]
